--- a/contrast/index.html
+++ b/contrast/index.html
@@ -252,22 +252,22 @@ td.right, th.right {
 
         <h2 id="loi-mo-dau">Lời Mở Đầu</h2>
         <p>Ủy ban An toàn Thuốc cản quang (Contrast Media Safety Committee - CMSC) tự hào giới thiệu phiên bản thứ 10 của Hướng dẫn về Thuốc Cản Quang. Chúng tôi bắt đầu vào năm 1994 và trung bình cập nhật tài liệu này mỗi 2 đến 3 năm. Trong những năm qua, hơn 200.000 bản đã được in và dịch ra nhiều ngôn ngữ. Mặc dù các chất cản quang hiện đang sử dụng đã có mặt trên thị trường nhiều năm, những thay đổi nhỏ vẫn xảy ra trong mô hình phản ứng bất lợi của chúng và các quan sát mới vẫn được báo cáo.</p>
-        <p>Phiên bản thứ 10 của Hướng dẫn bao gồm các phần cập nhật về phản ứng bất lợi cấp tính, thuốc cản quang chứa gadolinium và các vấn đề khác liên quan đến gadolinium, tổn thương thận cấp sau thuốc cản quang (PC-AKI) và đa u tủy với thuốc cản quang. CMSC đã quyết định chuẩn hóa việc sử dụng thuật ngữ 'chất cản quang' (contrast agent) và 'môi trường cản quang' (contrast medium), và có một phần ngắn về thuật ngữ ở đầu Hướng dẫn.</p>
+        <p>Phiên bản thứ 10 của Hướng dẫn bao gồm các phần cập nhật về phản ứng bất lợi cấp tính, thuốc tương phản chứa gadolinium và các vấn đề khác liên quan đến gadolinium, tổn thương thận cấp sau thuốc cản quang (PC-AKI) và đa u tủy với thuốc cản quang. CMSC đã quyết định chuẩn hóa việc sử dụng thuật ngữ 'chất tương phản' (contrast agent) và 'môi trường tương phản' (contrast medium), và có một phần ngắn về thuật ngữ ở đầu Hướng dẫn.</p>
         <p>Chúng tôi hy vọng bạn sẽ thích phiên bản mới này, rằng nó sẽ hữu ích trong thực hành của bạn và mang lại lợi ích cho tất cả bệnh nhân của chúng ta. Mọi ý kiến và câu hỏi xin gửi về esursecretary@esur.org.</p>
         <p><strong>Ủy ban An toàn Thuốc cản quang</strong><br/>
         Tháng 3 năm 2018<br/>
         Henrik S. Thomsen, Chủ tịch</p>
         <p><strong>LƯU Ý:</strong> Hướng dẫn của CMSC dựa trên bằng chứng trong y văn bất cứ khi nào có thể. Khi không có đủ bằng chứng được công bố, hướng dẫn dựa trên sự đồng thuận lâm sàng trong Ủy ban. Một số hướng dẫn của CMSC có thể khác với Tóm tắt Đặc tính Sản phẩm (SPC, nhãn) và/hoặc hướng dẫn do các cơ quan X quang quốc gia và các cơ quan khác soạn thảo.</p>
-        <p><strong>THÔNG BÁO PHÁP LÝ:</strong> Ủy ban và các tác giả của hướng dẫn về thuốc cản quang phiên bản 10.0 không chịu trách nhiệm về nội dung của các phiên bản dịch của hướng dẫn.</p>
+        <p><strong>THÔNG BÁO PHÁP LÝ:</strong> Ủy ban và các tác giả của hướng dẫn về thuốc tương phản phiên bản 10.0 không chịu trách nhiệm về nội dung của các phiên bản dịch của hướng dẫn.</p>
         <hr/>
 
-         <h2 id="huong-dan-nhanh">Hướng Dẫn Nhanh về Hướng Dẫn Thuốc Cản Quang CMSC, Phiên bản 10</h2>
-        <p><strong>Thuật ngữ:</strong> Chất cản quang và Môi trường cản quang</p>
+         <h2 id="huong-dan-nhanh">Hướng Dẫn Nhanh về Hướng Dẫn Thuốc tương phản CMSC, Phiên bản 10</h2>
+        <p><strong>Thuật ngữ:</strong> Chất tương phản và Môi trường tương phản</p>
         <h4>PHẦN A: PHẢN ỨNG BẤT LỢI CHUNG</h4>
         <p>Bao gồm:</p>
         <ul>
-            <li>Phản ứng bất lợi cấp tính với thuốc cản quang chứa iod và gadolinium.</li>
-            <li>Xử trí phản ứng bất lợi cấp tính với thuốc cản quang chứa iod, gadolinium và siêu âm.</li>
+            <li>Phản ứng bất lợi cấp tính với thuốc cản quang chứa iod và thuốc tương phản từ chứa gadolinium.</li>
+            <li>Xử trí phản ứng bất lợi cấp tính với thuốc tương phản chứa iod, gadolinium và siêu âm.</li>
             <li>Phản ứng bất lợi muộn.</li>
             <li>Nhiễm độc giáp.</li>
             <li>Xơ hóa hệ thống do thận (NSF).</li>
@@ -276,13 +276,13 @@ td.right, th.right {
         <p>Bao gồm:</p>
         <ul>
             <li>Đo chức năng thận.</li>
-            <li>Phản ứng bất lợi ở thận với thuốc cản quang chứa iod và gadolinium.</li>
+            <li>Phản ứng bất lợi ở thận với thuốc tương phản chứa iod và gadolinium.</li>
             <li>Metformin.</li>
         </ul>
         <h4>PHẦN C: CÁC VẤN ĐỀ KHÁC</h4>
         <p>Tất cả các chủ đề khác mà Ủy ban đã chuẩn bị hướng dẫn, bao gồm:</p>
         <ul>
-            <li>Sử dụng thuốc cản quang ở trẻ em.</li>
+            <li>Sử dụng thuốc tương phản ở trẻ em.</li>
             <li>Thoát mạch thuốc cản quang.</li>
             <li>Mang thai và cho con bú.</li>
             <li>Thuốc cản quang siêu âm.</li>
@@ -292,15 +292,15 @@ td.right, th.right {
         <hr/>
 
         <h2 id="thuat-ngu">Thuật ngữ: Chất cản quang và Môi trường cản quang</h2>
-        <p><strong>Chất cản quang (Contrast agent)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh được tạo ra bằng bất kỳ phương pháp nào. Đây là một thuật ngữ chung có thể được sử dụng cho các hợp chất cản quang X-quang, MR và siêu âm.</p>
-        <p><strong>Môi trường cản quang (Contrast medium)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh X-quang bằng cách thay đổi sự truyền qua của chùm tia X. Thuật ngữ này nên được dành riêng cho các hợp chất cản quang X-quang, ví dụ: dựa trên iod, bari, không khí và carbon dioxide.</p>
+        <p><strong>Chất tương phản (Contrast agent)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh được tạo ra bằng bất kỳ phương pháp nào. Đây là một thuật ngữ chung có thể được sử dụng cho các hợp chất tương phản dùng trong X-quang, MR và siêu âm.</p>
+        <p><strong>Chất cản quang (Contrast medium)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh X-quang bằng cách thay đổi sự truyền qua của chùm tia X. Thuật ngữ này nên được dành riêng cho các hợp chất cản quang X-quang, ví dụ: dựa trên iod, bari, không khí và carbon dioxide.</p>
         <hr/>
 
         <h2 id="a-phan-ung">A. PHẢN ỨNG BẤT LỢI CHUNG</h2>
 
         <h3 id="a1-cap-tinh">A.1 PHẢN ỨNG CẤP TÍNH</h3>
-        <p><strong>Định nghĩa:</strong> Phản ứng bất lợi xảy ra trong vòng 1 giờ sau khi tiêm thuốc cản quang.</p>
-        <p>Các phản ứng cấp tính tương tự được thấy sau khi dùng thuốc cản quang chứa iod và gadolinium và sau khi dùng thuốc cản quang siêu âm. Tỷ lệ mắc cao nhất sau khi dùng môi trường cản quang chứa iod và thấp nhất sau khi dùng thuốc cản quang siêu âm.</p>
+        <p><strong>Định nghĩa:</strong> Phản ứng bất lợi xảy ra trong vòng 1 giờ sau khi tiêm thuốc tương phản.</p>
+        <p>Các phản ứng cấp tính tương tự được thấy sau khi dùng thuốc cản quang chứa iod và gadolinium và sau khi dùng thuốc tương phản siêu âm. Tỷ lệ mắc cao nhất sau khi dùng thuốc cản quang chứa iod và thấp nhất sau khi dùng thuốc tương phản siêu âm.</p>
         <h4>Phân loại</h4>
         <p>Phản ứng cấp tính có thể là phản ứng giống dị ứng (hypersensitivity reactions) hoặc phản ứng hóa độc (chemotoxic responses). Phản ứng giống dị ứng có thể hoặc không phải là dị ứng thực sự qua trung gian IgE.</p>
         <table>
@@ -336,8 +336,8 @@ td.right, th.right {
         <p><strong>Lưu ý:</strong></p>
         <ul>
             <li>Hãy cảnh giác rằng một phản ứng ban đầu có vẻ nhẹ có thể tiến triển thành phản ứng nghiêm trọng hơn.</li>
-            <li>Không phải tất cả các triệu chứng bệnh nhân gặp phải trong vòng một giờ sau khi tiêm thuốc cản quang đều là phản ứng bất lợi với thuốc cản quang.</li>
-            <li>Sự lo lắng của bệnh nhân có thể gây ra các triệu chứng sau khi dùng thuốc cản quang (hiệu ứng Lalli).</li>
+            <li>Không phải tất cả các triệu chứng bệnh nhân gặp phải trong vòng một giờ sau khi tiêm thuốc tương phản đều là phản ứng bất lợi với thuốc tương phản.</li>
+            <li>Sự lo lắng của bệnh nhân có thể gây ra các triệu chứng sau khi dùng thuốc tương phản (hiệu ứng Lalli).</li>
             <li>Khi một loại thuốc cản quang mới lần đầu được giới thiệu tại một khoa, các tác dụng phụ có xu hướng được báo cáo quá mức (hiệu ứng Weber).</li>
         </ul>
 
@@ -363,9 +363,9 @@ td.right, th.right {
                      <td>
                          <strong>a) Chứa iod:</strong>
                          <ul>
-                             <li>Môi trường cản quang ion có độ thẩm thấu cao.</li>
-                             <li>Không có sự khác biệt về tỷ lệ phản ứng cấp tính giữa các thuốc cản quang non-ionic thẩm thấu thấp và thuốc cản quang non-ionic thẩm thấu bằng.</li>
-                             <li>Không có sự khác biệt về tỷ lệ biến cố bất lợi cấp tính giữa các thuốc non-ionic thẩm thấu thấp.</li>
+                             <li>Thuốc cản quang ion có độ thẩm thấu cao.</li>
+                             <li>Không có sự khác biệt về tỷ lệ phản ứng cấp tính giữa các thuốc cản quang non-ionic áp suất thẩm thấu thấp và thuốc cản quang non-ionic đồng áp suất thẩm thấu.</li>
+                             <li>Không có sự khác biệt về tỷ lệ biến cố bất lợi cấp tính giữa các thuốc non-ionic áp suất thẩm thấu thấp.</li>
                          </ul>
                           <strong>b) Chứa gadolinium:</strong>
                           <ul>
@@ -378,7 +378,7 @@ td.right, th.right {
         </table>
         <p><strong>Để giảm nguy cơ phản ứng cấp tính với các thuốc chứa iod và gadolinium:</strong></p>
         <ul>
-             <li><strong>Đối với tất cả bệnh nhân:</strong> Sử dụng môi trường cản quang non-ionic chứa iod.</li>
+             <li><strong>Đối với tất cả bệnh nhân:</strong> Sử dụng thuốc cản quang non-ionic chứa iod.</li>
              <li><strong>Đối với bệnh nhân có nguy cơ phản ứng tăng cao (xem yếu tố nguy cơ ở trên):</strong>
                  <ul>
                      <li>Cân nhắc một xét nghiệm thay thế không yêu cầu thuốc cản quang cùng loại.</li>
