--- a/contrast/index.html
+++ b/contrast/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hướng Dẫn ESUR về Thuốc Cản Quang bản 10.0</title>
+    <title>Hướng Dẫn ESUR về Thuốc Tương Phản bản 10.0</title>
     <style>
        body {
     font-family: Arial, sans-serif;
@@ -203,9 +203,9 @@ td.right, th.right {
                 <a href="#b-phan-ung-than">B. Phản Ứng Bất Lợi ở Thận (PC-AKI)</a>
                  <ul>
                     <li><a href="#b1-do-than">B.1 Đo chức năng thận</a></li>
-                    <li><a href="#b2-iod">B.2 Phản ứng với thuốc Iod</a></li>
-                    <li><a href="#b3-gadolinium">B.3 Phản ứng với thuốc Gadolinium</a></li>
-                    <li><a href="#b4-metformin">B.4 Bệnh nhân Metformin</a></li>
+                    <li><a href="#b2-iod">B.2 Phản ứng với thuốc cản quang chứa Iod</a></li>
+                    <li><a href="#b3-gadolinium">B.3 Phản ứng với thuốc tương phản từ chứa Gadolinium</a></li>
+                    <li><a href="#b4-metformin">B.4 Bệnh nhân dùng Metformin</a></li>
                     <li><a href="#b5-loc-mau">B.5 Lọc máu</a></li>
                     <li><a href="#b6-dung-chung">B.6 Dùng chung Iod & Gadolinium</a></li>
                     <li><a href="#b7-khoang-cach-iod">B.7 Khoảng cách giữa 2 lần tiêm Iod</a></li>
@@ -245,14 +245,14 @@ td.right, th.right {
     </nav>
 
     <main id="main-content">
-        <h1 id="trang-chu">Hướng Dẫn ESUR về Thuốc Cản Quang 10.0</h1>
-        <p>Phiên bản tổng hợp Hướng Dẫn về Thuốc Cản Quang của Hội Niệu-Sinh dục-X quang Châu Âu (ESUR), phiên bản 10.0, tháng 3 năm 2018.</p>
+        <h1 id="trang-chu">Hướng Dẫn ESUR về Thuốc Tương Phản bản 10.0</h1>
+        <p>Phiên bản tổng hợp Hướng Dẫn về Thuốc tương phản của Hội Niệu-Sinh dục-X quang Châu Âu (ESUR), phiên bản 10.0, tháng 3 năm 2018.</p>
         <p>Tài liệu này cung cấp các hướng dẫn dựa trên bằng chứng và đồng thuận lâm sàng về việc sử dụng an toàn các chất cản quang trong chẩn đoán hình ảnh.</p>
         <hr/>
 
         <h2 id="loi-mo-dau">Lời Mở Đầu</h2>
-        <p>Ủy ban An toàn Thuốc cản quang (Contrast Media Safety Committee - CMSC) tự hào giới thiệu phiên bản thứ 10 của Hướng dẫn về Thuốc Cản Quang. Chúng tôi bắt đầu vào năm 1994 và trung bình cập nhật tài liệu này mỗi 2 đến 3 năm. Trong những năm qua, hơn 200.000 bản đã được in và dịch ra nhiều ngôn ngữ. Mặc dù các chất cản quang hiện đang sử dụng đã có mặt trên thị trường nhiều năm, những thay đổi nhỏ vẫn xảy ra trong mô hình phản ứng bất lợi của chúng và các quan sát mới vẫn được báo cáo.</p>
-        <p>Phiên bản thứ 10 của Hướng dẫn bao gồm các phần cập nhật về phản ứng bất lợi cấp tính, thuốc tương phản chứa gadolinium và các vấn đề khác liên quan đến gadolinium, tổn thương thận cấp sau thuốc cản quang (PC-AKI) và đa u tủy với thuốc cản quang. CMSC đã quyết định chuẩn hóa việc sử dụng thuật ngữ 'chất tương phản' (contrast agent) và 'môi trường tương phản' (contrast medium), và có một phần ngắn về thuật ngữ ở đầu Hướng dẫn.</p>
+        <p>Ủy ban An toàn Thuốc tương phản (Contrast Media Safety Committee - CMSC) tự hào giới thiệu phiên bản thứ 10 của Hướng dẫn về Thuốc tương phản. Chúng tôi bắt đầu vào năm 1994 và trung bình cập nhật tài liệu này mỗi 2 đến 3 năm. Trong những năm qua, hơn 200.000 bản đã được in và dịch ra nhiều ngôn ngữ. Mặc dù các chất tương phản hiện đang sử dụng đã có mặt trên thị trường nhiều năm, những thay đổi nhỏ vẫn xảy ra trong mô hình phản ứng bất lợi của chúng và các quan sát mới vẫn được báo cáo.</p>
+        <p>Phiên bản thứ 10 của Hướng dẫn bao gồm các phần cập nhật về phản ứng bất lợi cấp tính, thuốc tương phản từ chứa gadolinium và các vấn đề khác liên quan đến gadolinium, tổn thương thận cấp sau thuốc cản quang (PC-AKI) và đa u tủy với thuốc cản quang. CMSC đã quyết định chuẩn hóa việc sử dụng thuật ngữ 'chất tương phản' (contrast agent) và 'thuốc cản quang' (contrast medium), và có một phần ngắn về thuật ngữ ở đầu Hướng dẫn.</p>
         <p>Chúng tôi hy vọng bạn sẽ thích phiên bản mới này, rằng nó sẽ hữu ích trong thực hành của bạn và mang lại lợi ích cho tất cả bệnh nhân của chúng ta. Mọi ý kiến và câu hỏi xin gửi về esursecretary@esur.org.</p>
         <p><strong>Ủy ban An toàn Thuốc cản quang</strong><br/>
         Tháng 3 năm 2018<br/>
@@ -262,7 +262,7 @@ td.right, th.right {
         <hr/>
 
          <h2 id="huong-dan-nhanh">Hướng Dẫn Nhanh về Hướng Dẫn Thuốc tương phản CMSC, Phiên bản 10</h2>
-        <p><strong>Thuật ngữ:</strong> Chất tương phản và Môi trường tương phản</p>
+        <p><strong>Thuật ngữ:</strong> Chất tương phản và Thuốc cản quang</p>
         <h4>PHẦN A: PHẢN ỨNG BẤT LỢI CHUNG</h4>
         <p>Bao gồm:</p>
         <ul>
@@ -276,7 +276,7 @@ td.right, th.right {
         <p>Bao gồm:</p>
         <ul>
             <li>Đo chức năng thận.</li>
-            <li>Phản ứng bất lợi ở thận với thuốc tương phản chứa iod và gadolinium.</li>
+            <li>Phản ứng bất lợi ở thận với chất tương phản chứa iod và gadolinium.</li>
             <li>Metformin.</li>
         </ul>
         <h4>PHẦN C: CÁC VẤN ĐỀ KHÁC</h4>
@@ -286,21 +286,21 @@ td.right, th.right {
             <li>Thoát mạch thuốc cản quang.</li>
             <li>Mang thai và cho con bú.</li>
             <li>Thuốc cản quang siêu âm.</li>
-            <li>Môi trường cản quang Barium.</li>
-            <li>Sử dụng thuốc cản quang ngoài nhãn (off-label).</li>
+            <li>Thuốc cản quang Barium.</li>
+            <li>Sử dụng thuốc cản quang ngoài hướng dẫn sử dụng (off-label).</li>
         </ul>
         <hr/>
 
-        <h2 id="thuat-ngu">Thuật ngữ: Chất cản quang và Môi trường cản quang</h2>
+        <h2 id="thuat-ngu">Thuật ngữ: Chất tương phản và Thuốc cản quang</h2>
         <p><strong>Chất tương phản (Contrast agent)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh được tạo ra bằng bất kỳ phương pháp nào. Đây là một thuật ngữ chung có thể được sử dụng cho các hợp chất tương phản dùng trong X-quang, MR và siêu âm.</p>
-        <p><strong>Chất cản quang (Contrast medium)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh X-quang bằng cách thay đổi sự truyền qua của chùm tia X. Thuật ngữ này nên được dành riêng cho các hợp chất cản quang X-quang, ví dụ: dựa trên iod, bari, không khí và carbon dioxide.</p>
+        <p><strong>Thuốc cản quang (Contrast medium)</strong> là một chất làm thay đổi độ tương phản trong hình ảnh X-quang bằng cách thay đổi sự truyền qua của chùm tia X. Thuật ngữ này nên được dành riêng cho các hợp chất cản quang X-quang, ví dụ: dựa trên iod, bari, không khí và carbon dioxide.</p>
         <hr/>
 
         <h2 id="a-phan-ung">A. PHẢN ỨNG BẤT LỢI CHUNG</h2>
 
         <h3 id="a1-cap-tinh">A.1 PHẢN ỨNG CẤP TÍNH</h3>
-        <p><strong>Định nghĩa:</strong> Phản ứng bất lợi xảy ra trong vòng 1 giờ sau khi tiêm thuốc tương phản.</p>
-        <p>Các phản ứng cấp tính tương tự được thấy sau khi dùng thuốc cản quang chứa iod và gadolinium và sau khi dùng thuốc tương phản siêu âm. Tỷ lệ mắc cao nhất sau khi dùng thuốc cản quang chứa iod và thấp nhất sau khi dùng thuốc tương phản siêu âm.</p>
+        <p><strong>Định nghĩa:</strong> Phản ứng bất lợi xảy ra trong vòng 1 giờ sau khi tiêm chất tương phản.</p>
+        <p>Các phản ứng cấp tính tương tự được thấy sau khi dùng chất tương phản chứa iod và gadolinium và sau khi dùng thuốc tương phản siêu âm. Tỷ lệ mắc cao nhất sau khi dùng thuốc cản quang chứa iod và thấp nhất sau khi dùng thuốc tương phản siêu âm.</p>
         <h4>Phân loại</h4>
         <p>Phản ứng cấp tính có thể là phản ứng giống dị ứng (hypersensitivity reactions) hoặc phản ứng hóa độc (chemotoxic responses). Phản ứng giống dị ứng có thể hoặc không phải là dị ứng thực sự qua trung gian IgE.</p>
         <table>
@@ -336,12 +336,12 @@ td.right, th.right {
         <p><strong>Lưu ý:</strong></p>
         <ul>
             <li>Hãy cảnh giác rằng một phản ứng ban đầu có vẻ nhẹ có thể tiến triển thành phản ứng nghiêm trọng hơn.</li>
-            <li>Không phải tất cả các triệu chứng bệnh nhân gặp phải trong vòng một giờ sau khi tiêm thuốc tương phản đều là phản ứng bất lợi với thuốc tương phản.</li>
-            <li>Sự lo lắng của bệnh nhân có thể gây ra các triệu chứng sau khi dùng thuốc tương phản (hiệu ứng Lalli).</li>
+            <li>Không phải tất cả các triệu chứng bệnh nhân gặp phải trong vòng một giờ sau khi tiêm chất tương phản đều là phản ứng bất lợi với thuốc tương phản.</li>
+            <li>Sự lo lắng của bệnh nhân có thể gây ra các triệu chứng sau khi dùng chất tương phản (hiệu ứng Lalli).</li>
             <li>Khi một loại thuốc cản quang mới lần đầu được giới thiệu tại một khoa, các tác dụng phụ có xu hướng được báo cáo quá mức (hiệu ứng Weber).</li>
         </ul>
 
-        <h4>A.1.1. Phản ứng cấp tính với thuốc cản quang chứa iod và gadolinium</h4>
+        <h4>A.1.1. Phản ứng cấp tính với chất tương phản chứa iod và gadolinium</h4>
         <p>Lưu ý: Các nghiên cứu hồi cứu về tỷ lệ phản ứng cấp tính thường bị thiếu sót báo cáo đáng kể và do đó không đáng tin cậy.</p>
         <table>
             <thead>
@@ -352,24 +352,24 @@ td.right, th.right {
                     <td><strong>Liên quan đến bệnh nhân</strong></td>
                     <td>Bệnh nhân có tiền sử:<br/>
                     <ul>
-                        <li>Phản ứng cấp tính trung bình hoặc nặng trước đó (xem phân loại ở trên) với thuốc cản quang chứa iod hoặc gadolinium.</li>
+                        <li>Phản ứng cấp tính trung bình hoặc nặng trước đó (xem phân loại ở trên) với chất tương phản chứa iod hoặc gadolinium.</li>
                         <li>Hen suyễn cần điều trị y tế.</li>
                         <li>Cơ địa dị ứng (Atopy) cần điều trị y tế.</li>
                     </ul>
                     </td>
                 </tr>
                 <tr>
-                     <td><strong>Liên quan đến thuốc tương phản</strong></td>
+                     <td><strong>Liên quan đến chất tương phản</strong></td>
                      <td>
                          <strong>a) Chứa iod:</strong>
                          <ul>
-                             <li>Thuốc cản quang ion có độ thẩm thấu cao.</li>
+                             <li>Thuốc cản quang ion có áp suất thẩm thấu cao.</li>
                              <li>Không có sự khác biệt về tỷ lệ phản ứng cấp tính giữa các thuốc cản quang non-ionic áp suất thẩm thấu thấp và thuốc cản quang non-ionic đồng áp suất thẩm thấu.</li>
                              <li>Không có sự khác biệt về tỷ lệ biến cố bất lợi cấp tính giữa các thuốc non-ionic áp suất thẩm thấu thấp.</li>
                          </ul>
                           <strong>b) Chứa gadolinium:</strong>
                           <ul>
-                              <li>Nguy cơ phản ứng không liên quan đến độ thẩm thấu của thuốc cản quang: liều thấp được sử dụng làm cho tải lượng thẩm thấu rất nhỏ.</li>
+                              <li>Nguy cơ phản ứng không liên quan đến độ thẩm thấu của thuốc tương phản từ: liều thấp được sử dụng làm cho tải lượng thẩm thấu rất nhỏ.</li>
                               <li>Không có sự khác biệt về tỷ lệ phản ứng bất lợi cấp tính giữa các thuốc ngoại bào chứa gadolinium.</li>
                           </ul>
                      </td>
@@ -381,8 +381,8 @@ td.right, th.right {
              <li><strong>Đối với tất cả bệnh nhân:</strong> Sử dụng thuốc cản quang non-ionic chứa iod.</li>
              <li><strong>Đối với bệnh nhân có nguy cơ phản ứng tăng cao (xem yếu tố nguy cơ ở trên):</strong>
                  <ul>
-                     <li>Cân nhắc một xét nghiệm thay thế không yêu cầu thuốc cản quang cùng loại.</li>
-                     <li>Đối với những người đã từng phản ứng với thuốc cản quang: sử dụng một loại thuốc cản quang khác, tốt nhất là sau khi tham khảo ý kiến của chuyên gia về dị ứng thuốc.</li>
+                     <li>Cân nhắc một xét nghiệm thay thế không yêu cầu chất tương phản cùng loại.</li>
+                     <li>Đối với những người đã từng phản ứng với chất tương phản: sử dụng một loại chất tương phản khác, tốt nhất là sau khi tham khảo ý kiến của chuyên gia về dị ứng thuốc.</li>
                      <li>Không khuyến cáo dùng thuốc dự phòng (premedication) vì không có bằng chứng tốt về hiệu quả của nó.</li>
                  </ul>
              </li>
@@ -392,13 +392,13 @@ td.right, th.right {
              <li><strong>Đối với tất cả bệnh nhân:</strong>
                  <ul>
                      <li>Chuẩn bị sẵn các loại thuốc và thiết bị hồi sức (xem A.1.2.1).</li>
-                     <li>Giữ bệnh nhân trong môi trường y tế trong 30 phút sau khi tiêm thuốc cản quang.</li>
+                     <li>Giữ bệnh nhân trong môi trường y tế trong 30 phút sau khi tiêm chất tương phản.</li>
                  </ul>
             </li>
         </ul>
 
         <h4>A.1.2. Xử trí phản ứng bất lợi cấp tính</h4>
-        <p>Việc xử trí là như nhau đối với các phản ứng bất lợi cấp tính sau khi dùng thuốc cản quang chứa iod, gadolinium và siêu âm.</p>
+        <p>Việc xử trí là như nhau đối với các phản ứng bất lợi cấp tính sau khi dùng chất tương phản chứa iod, gadolinium và siêu âm.</p>
         <h5>A.1.2.1. Chuẩn bị sẵn sàng để điều trị phản ứng bất lợi cấp tính</h5>
         <p>Các loại thuốc và thiết bị cấp cứu hàng đầu nên có trong phòng khám:</p>
         <ul>
@@ -420,7 +420,7 @@ td.right, th.right {
             <li>Giữ bệnh nhân trong môi trường y tế trong 30 phút sau khi tiêm thuốc cản quang.</li>
         </ul>
 
-        <h5>A.1.2.2. Hướng dẫn đơn giản xử trí ban đầu phản ứng cấp tính với tất cả các loại thuốc cản quang</h5>
+        <h5>A.1.2.2. Hướng dẫn đơn giản xử trí ban đầu phản ứng cấp tính với tất cả các loại chất tương phản</h5>
         <p>Khi xảy ra phản ứng cấp tính, kiểm tra các dấu hiệu sau:</p>
         <ul>
             <li>Da đỏ, mày đay (cởi đồ bệnh nhân để kiểm tra toàn thân).</li>
@@ -513,7 +513,7 @@ td.right, th.right {
          </ul>
 
         <h4>A.1.5. Nhịn ăn trước khi dùng thuốc tương phản</h4>
-        <p>Việc nhịn ăn trước khi tiêm thuốc cản quang tĩnh mạch có từ thời điểm sử dụng thuốc cản quang chứa iod có độ thẩm thấu cao và nhiều bệnh nhân bị nôn. Không khuyến cáo nhịn ăn trước khi dùng thuốc cản quang non-ionic có áp suất thẩm thấu thấp hoặc bằng hoặc các thuốc chứa gadolinium.</p>
+        <p>Việc nhịn ăn trước khi tiêm chất tương phản tĩnh mạch có từ thời điểm sử dụng thuốc cản quang chứa iod có độ thẩm thấu cao và nhiều bệnh nhân bị nôn. Không khuyến cáo nhịn ăn trước khi dùng thuốc cản quang non-ionic có áp suất thẩm thấu thấp hoặc bằng hoặc các thuốc tương phản từ chứa ggadolinium.</p>
 
         <h3 id="a2-muon">A.2 PHẢN ỨNG BẤT LỢI MUỘN</h3>
         <table>
@@ -554,10 +554,10 @@ td.right, th.right {
                  </tr>
              </tbody>
          </table>
-        <p>Lưu ý: Các phản ứng da muộn loại xảy ra sau khi dùng môi trường cản quang chứa iod chưa được mô tả sau khi dùng thuốc cản quang chứa gadolinium và siêu âm.</p>
+        <p>Lưu ý: Các phản ứng da muộn loại xảy ra sau khi dùng thuốc cản quang chứa iod này chưa được mô tả đối với sau khi dùng thuốc cản quang chứa gadolinium và siêu âm.</p>
 
         <h3 id="a3-rat-muon">A.3 PHẢN ỨNG BẤT LỢI RẤT MUỘN</h3>
-        <p><strong>Định nghĩa:</strong> phản ứng bất lợi thường xảy ra hơn 1 tuần sau khi tiêm thuốc tương phản.</p>
+        <p><strong>Định nghĩa:</strong> phản ứng bất lợi thường xảy ra hơn 1 tuần sau khi tiêm chất tương phản.</p>
         <p><strong>Loại phản ứng:</strong></p>
         <ul>
             <li>Thuốc cản quang chứa iod: Nhiễm độc giáp</li>
