--- a/contrast/index.html
+++ b/contrast/index.html
@@ -207,9 +207,9 @@ td.right, th.right {
                     <li><a href="#b3-gadolinium">B.3 Phản ứng với thuốc tương phản từ chứa Gadolinium</a></li>
                     <li><a href="#b4-metformin">B.4 Bệnh nhân dùng Metformin</a></li>
                     <li><a href="#b5-loc-mau">B.5 Lọc máu</a></li>
-                    <li><a href="#b6-dung-chung">B.6 Dùng chung Iod & Gadolinium</a></li>
-                    <li><a href="#b7-khoang-cach-iod">B.7 Khoảng cách giữa 2 lần tiêm Iod</a></li>
-                    <li><a href="#b8-khoang-cach-gadolinium">B.8 Khoảng cách giữa 2 lần tiêm Gadolinium</a></li>
+                    <li><a href="#b6-dung-chung">B.6 Dùng thuốc cản quang chứa Iod & thuốc tương phản từ chứa Gadolinium gần nhau</a></li>
+                    <li><a href="#b7-khoang-cach-iod">B.7 Khoảng cách giữa 2 lần tiêm thuốc cản quang chứa Iod</a></li>
+                    <li><a href="#b8-khoang-cach-gadolinium">B.8 Khoảng cách giữa 2 lần tiêm thuốc tương phản từ chứa Gadolinium</a></li>
                  </ul>
             </li>
              <li>
@@ -222,10 +222,10 @@ td.right, th.right {
                      <li><a href="#c5-thai-ky">C.5 Thai kỳ & Cho con bú</a></li>
                      <li><a href="#c6-tuong-tac">C.6 Tương tác thuốc/xét nghiệm</a></li>
                      <li><a href="#c7-gadolinium">C.7 Vấn đề Gadolinium</a></li>
-                     <li><a href="#c8-sieu-am">C.8 An toàn thuốc siêu âm</a></li>
+                     <li><a href="#c8-sieu-am">C.8 An toàn thuốc tương phản siêu âm</a></li>
                      <li><a href="#c9-barium">C.9 An toàn thuốc Barium</a></li>
                      <li><a href="#c10-tre-em">C.10 Sử dụng ở trẻ em</a></li>
-                     <li><a href="#c11-ngoai-nhan">C.11 Sử dụng ngoài nhãn</a></li>
+                     <li><a href="#c11-ngoai-nhan">C.11 Sử dụng thuốc ngoài khuyến cáo (off - label)</a></li>
                  </ul>
             </li>
             <li><a href="#d-bang-hoi">D. Bảng Hỏi/Thư Mẫu</a>
